# vision

./: README.md  calibrate.py  package.xml  setup.cfg  setup.py
photos/calibrate/: README.md
vision/: camera.py  detector.py
