<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="devbox@todo.todo">devbox</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>python3-opencv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>python-dt-apriltags-pip</build_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-dt-apriltags-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
